# shapelearningtheory

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
experiments/: experiment1_bias.py  experiment2_learnability.py  experiment3_ntk_trainednets.py  experiment4_ntk_clusters.py  experiment5_multishape.py  experiment6_learnability_multishape.py  experiment6_ntk.py  experiment7_ntk_trainednets.py  experiment7_transformer_hyperparams.py  experiment8_ntk_clusters.py  experiment_1a_bias_colorrect.py  experiment_1b_bias_striperect.py  experiment_1c_bias_colorLT.py  experiment_1d_bias_stripeLT.py  experiment_1e_bias_colorrect_large.py  experiment_1f_bias_striperect_large.py  experiment_1g_bias_colorLT_large.py  experiment_1h_bias_stripeLT_large.py  experiment_2a_learnability_rectangles.py  experiment_2b_learnability_LT.py  experiment_2c_learnability_rectangles_large.py  experiment_2d_learnability_LT_large.py  experiment_3a_rsa_colorrect.py  experiment_3b_rsa_striperect.py  experiment_3c_rsa_colorLT.py  experiment_3d_rsa_stripeLT.py  experiment_4a_gradients_colorrect.py  experiment_4b_gradients_striperect.py  experiment_4c_gradients_colorLT.py  experiment_4d_gradients_stripeLT.py  experiment_5a_bias_colorrect.py  experiment_5b_bias_striperect.py  experiment_5c_bias_colorLT.py  experiment_5d_bias_stripeLT.py  helpers.py  trainLT.py  trainlines.py  trainrectangles.py
shapelearningtheory/: autoencoder.py  color_set.py  colorcategories.py  colors.py  convnet.py  linearnetworks.py  linedataset.py  mlp.py  old_shapes.py  shapes.py  (+5 more)
(+34 files in other folders)
